[tool.poetry]
name = "ditree"
version = "0.0.1"
description = "Dependency Injector with dataclass integration"
authors = ["Anton Demkin <antondemkin@yandex.ru>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = [
    "^3.9",
    "^3.10",
    "^3.11",
    "^3.12",
]


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.0"
ruff = "^0.5.3"
isort = "^5.13.2"
pytest = "^8.2.2"
coverage = "^7.6.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
