[tool.ruff]
line-length = 100
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # conflicting magic trailing comma
    "D",  # skip docstrings
    "TRY003",  # allow long exception messages
    "EM102",  # allow f-string exception messages
    "EM101",  # allow string literal in exception message
    "ANN401",  # allow Any type
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = [
    "ARG001",  # ignore missing arguments
    "S101",  # allow assert
    "PLR2004",  # allow magic numbers
]

[tool.ruff.lint.isort]
force-single-line = true
force-sort-within-sections = true


[tool.mypy]
implicit_optional = true
warn_unreachable = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
strict = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
follow_imports = "skip"
ignore_errors = true


[project]
name = "di3"
version = "0.0.1"
description = "Dependency Injector Tree builder framework"
authors = [
    { name="Anton Demkin", email="antondemkin@yandex.ru" },
]
license = "MIT"
readme = "README.rst"
requires-python = ">=3.10"

[dependency-groups]
dev = [
    "coverage>=7.11.3",
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

